feat: add style on word-meaning example

--- a/src/input.css
+++ b/src/input.css
@@ -567,3 +567,103 @@ video {
     max-width: 1536px;
   }
 }
+
+*:not(i) {
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  --tw-bg-opacity: 1;
+  background-color: rgb(174 156 255 / var(--tw-bg-opacity));
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 90vmin;
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
+  transform: translate(-50%, -50%);
+}
+
+.search-box {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.search-box button {
+  width: 25%;
+  border-radius: 0.375rem;
+  border-style: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(174 156 255 / var(--tw-bg-opacity));
+  padding-top: 15px;
+  padding-bottom: 15px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.result {
+  position: relative;
+}
+
+.result h3 {
+  font-size: 30px;
+  --tw-text-opacity: 1;
+  color: rgb(31 25 76 / var(--tw-text-opacity));
+}
+
+.result .word {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.result button {
+  border-style: none;
+  background-color: transparent;
+  font-size: 18px;
+  --tw-text-opacity: 1;
+  color: rgb(174 156 255 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.result .details {
+  margin-top: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+  font-size: 14px;
+  --tw-text-opacity: 1;
+  color: rgb(179 182 212 / var(--tw-text-opacity));
+}
+
+.word-meaning {
+  --tw-text-opacity: 1;
+  color: rgb(87 90 123 / var(--tw-text-opacity));
+}
+
+.word-example {
+  margin-top: 30px;
+  padding-left: 20px;
+  font-style: italic;
+  --tw-text-opacity: 1;
+  color: rgb(87 90 123 / var(--tw-text-opacity));
+  border-left: 5px solid #ae9cff;
+}
+
+.error {
+  margin-top: 80px;
+  text-align: center;
+}
